# clorinde

./: .gitignore  .rules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: docs.yml  main.yaml
benches/: Cargo.toml  README.md  codegen.rs
benches/execution/: main.rs
clorinde/: Cargo.toml
clorinde/src/: cli.rs  codegen.rs  config.rs  conn.rs  lib.rs  parser.rs  prepare_queries.rs  read_queries.rs  type_registrar.rs  validation.rs
clorinde/src/codegen/: cargo.rs  client.rs  queries.rs  types.rs  vfs.rs
crates/clorinde/: Cargo.toml
crates/clorinde/src/: cli.rs  codegen.rs  config.rs  prepare_queries.rs  type_registrar.rs
crates/clorinde/src/codegen/: cargo.rs  client.rs  queries.rs  types.rs
crates/cornucopia/src/: type_registrar.rs
docs/: book.toml
docs/src/: SUMMARY.md  configuration.md  introduction.md
docs/src/introduction/: migration_from_cornucopia.md
docs/src/using_clorinde/: cli.md  error_reporting.md
docs/src/using_queries/: ergonomic_parameters.md  query_metadata.md  using_queries.md
docs/src/writing_queries/: query_annotations.md  type_annotations.md
examples/auto_build/: Cargo.toml  build.rs
examples/auto_build/auto_build_codegen/: Cargo.toml
examples/auto_build/auto_build_codegen/src/: types.rs
examples/auto_build/auto_build_codegen/src/queries/: module_1.rs
examples/basic_async/: Cargo.toml  README.md
examples/basic_async/basic_async_codegen/: Cargo.toml
examples/basic_async/basic_async_codegen/src/: types.rs
examples/basic_async/basic_async_codegen/src/queries/: module_1.rs  module_2.rs
examples/basic_async/queries/: module_2.sql
examples/basic_async/src/: main.rs
examples/basic_async_wasm/: Cargo.toml  README.md
examples/basic_async_wasm/basic_async_wasm_codegen/: Cargo.toml
examples/basic_async_wasm/basic_async_wasm_codegen/src/queries/: module_2.rs
examples/basic_async_wasm/src/: lib.rs
examples/basic_sync/: README.md
examples/basic_sync/basic_sync_codegen/: Cargo.toml
examples/basic_sync/basic_sync_codegen/src/: lib.rs  types.rs
examples/basic_sync/basic_sync_codegen/src/client/: sync.rs
examples/basic_sync/basic_sync_codegen/src/queries/: module_1.rs  module_2.rs
examples/basic_sync/src/: main.rs
examples/custom_types/: Cargo.toml  README.md  clorinde.toml  schema.sql
examples/custom_types/ctypes/: Cargo.toml
examples/custom_types/ctypes/src/: element.rs  lib.rs
examples/custom_types/custom_types_codegen/: Cargo.toml
examples/custom_types/custom_types_codegen/src/: queries.rs  types.rs
examples/custom_types/custom_types_codegen/src/queries/: author.rs  module_1.rs  module_2.rs
examples/custom_types/custom_types_codegen/src/queries/author/: module_2.rs
examples/custom_types/custom_types_codegen/src/queries/book/: module_1.rs
examples/custom_types/db/custom_types_codegen/: Cargo.toml
examples/custom_types/db/custom_types_codegen/src/: types.rs
examples/custom_types/db/custom_types_codegen/src/queries/: module_1.rs  module_2.rs
examples/custom_types/queries/: module_2.sql
examples/custom_types/queries/author/: module_2.sql
examples/custom_types/queries/book/: module_1.sql
examples/custom_types/src/: main.rs
examples/enum_fromstr/: Cargo.toml  README.md  schema.sql
examples/enum_fromstr/enum_fromstr_codegen/: Cargo.toml  build.rs
examples/enum_fromstr/enum_fromstr_codegen/src/: build.rs  lib.rs
examples/enum_fromstr/queries/: items.sql  navigation.sql
examples/enum_fromstr/src/: main.rs
src/: cli.rs  config.rs  conn.rs  container.rs  error.rs  lib.rs  parser.rs  prepare_queries.rs  type_registrar.rs  validation.rs
src/codegen/: cargo.rs  client.rs  queries.rs  types.rs  vfs.rs
tests/codegen/: Cargo.toml  clorinde.toml
tests/codegen/codegen/: Cargo.toml
tests/codegen/codegen/src/: queries.rs  types.rs
tests/codegen/codegen/src/queries/: attributes.rs  copy.rs  domain.rs  named.rs  nullity.rs  params.rs  stress.rs  syntax.rs
tests/codegen/queries/: attributes.sql  nullity.sql
tests/codegen/src/: main.rs
tests/integration/: Cargo.toml  README.md  test.rs
tests/integration/src/: codegen.rs  errors.rs  fixtures.rs  main.rs
