[workspace]
resolver = "2"
members = ["benches", "clorinde", "examples/*", "tests/*"]

[workspace.dependencies]
# Dependencies for examples that have `use-workspace-deps = true`
postgres-types = { version = "0.2", features = ["derive"] }
postgres-protocol = "0.6"
fallible-iterator = "0.2"
chrono = "0.4"
time = "0.3"
tokio-postgres = { version = "0.7", default-features = false, features = [
    "with-chrono-0_4",
    "with-time-0_3",
] }
futures = "0.3"
deadpool-postgres = "0.14"
