[package]
name = "clorinde"
version = "1.0.0-beta.2"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Generate type-checked Rust from your PostgreSQL queries."
homepage = "https://github.com/halcyonnouveau/clorinde"
repository = "https://github.com/halcyonnouveau/clorinde"
readme = "README.md"
categories = ["database"]
keywords = ["postgresql", "query", "generator", "sql", "tokio-postgres"]
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE-*"]
publish = true

[dependencies]
# Codegen tools
quote = "1.0"
prettyplease = "0.2"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"

# Postgres interaction
postgres = "0.19"
postgres-types = "0.2"

# Error handling and reporting
thiserror = "2.0"
miette = { version = "7.6", features = ["fancy"] }

# Parser
chumsky = "0.10"

# CLI handling
clap = { version = "4.5", features = ["derive", "env"] }

# Word case
heck = "0.5"

# Order-preserving map to work around borrowing issues
indexmap = "2.9"

# Generate temporary files
tempfile = "3.20"

# Random generation
rand = "0.9"

# Config handling
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
cargo_toml = "0.22"

[dev-dependencies]
# Benchmarking
criterion = { version = "0.6.0", features = ["html_reports"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
futures = "0.3.31"
postgres = "0.19.9"
tokio-postgres = "0.7.12"
postgres-types = "0.2.8"
diesel = { version = "2.2.10", features = ["postgres"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres"] }
tempfile = "3.20.0"
generated = { path = "benches/generated" }

[[bench]]
name = "execution"
harness = false
path = "benches/execution/main.rs"

[[bench]]
name = "codegen"
harness = false
path = "benches/codegen.rs"

[workspace]
resolver = "2"
members = ["examples/*", "tests/*"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = "symbols"
panic = "abort"
