[package]
name = "clorinde"
version = "0.16.0"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Generate type-checked Rust from your PostgreSQL queries."
homepage = "https://github.com/halcyonnouveau/clorinde"
repository = "https://github.com/halcyonnouveau/clorinde"
readme = "../README.md"
categories = ["database"]
keywords = ["postgresql", "query", "generator", "sql", "tokio-postgres"]
publish = true

[dependencies]
# Codegen tools
quote = "1.0"
prettyplease = "0.2"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"

# Postgres interaction
postgres = "0.19"
postgres-types = "0.2"

# Error handling and reporting
thiserror = "2.0"
miette = { version = "7.6", features = ["fancy"] }

# Parser
chumsky = "0.10"

# CLI handling
clap = { version = "4.5", features = ["derive", "env"] }

# Word case
heck = "0.5"

# Order-preserving map to work around borrowing issues
indexmap = "2.9"

# Generate temporary files
tempfile = "3.19"

# Random generation
rand = "0.9"

# Config handling
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
