[package]
name = "enum_fromstr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
deadpool-postgres = "0.11"
tokio-postgres = "0.7"
enum_fromstr_codegen = { path = "enum_fromstr_codegen" }

[workspace]
members = ["enum_fromstr_codegen"]