[package]
name = "test_integration"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Path dependencies
clorinde = { path = "../.." }

# Create temporary projects for error tests.
tempfile = "3.20.0"

# Colored output
owo-colors = "4.2.2"

# CLI handling
clap = { version = "4.5.40", features = ["derive"] }

# Postgres interaction
tokio-postgres = "0.7.12"
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros"] }
futures = "0.3"

# serde
## Test fixtures ser/de
serde = { version = "1.0.217", features = ["derive"] }
## Read/write fixture files
toml = "0.8.23"
